Fix: Replaced last mentions of px in card.css, hopefully it fixes the text overflow issue completely

--- a/css/card.css
+++ b/css/card.css
@@ -11,7 +11,7 @@
 .card {
     display: block;
     width: 14em;
-    height: 20em;
+    height: 21em;
     position: relative;
     text-align: center;
 }
@@ -19,7 +19,7 @@
 .filler-card {
     display: block;
     width: 14em;
-    height: 0px;
+    height: 0;
 }
 
 .card-front, .card-back {
@@ -55,7 +55,7 @@
 
 .card h3 {
     margin: 0;
-    padding-bottom: 10px;
+    margin-bottom: 0.5em;
 }
 
 .card img {
